--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.11.0",
     "http-status": "^2.1.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "socket.io-client": "^4.8.1"
